--- a/src/microservice/values.yaml
+++ b/src/microservice/values.yaml
@@ -19,12 +19,13 @@ service:
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
+  annotations:
+    kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: microservice.minikube
+      paths:
+        - "/"
 
   tls: []
   #  - secretName: chart-example-tls
